--- a/css/contact.css
+++ b/css/contact.css
@@ -365,3 +365,35 @@ body::before{
     }
 }
 
+.container .form-area form textarea {
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+.container .form-area form input,
+.container .form-area form textarea {
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  padding: 12px;
+  margin-bottom: 12px;
+  font-size: 15px;
+  width: 100%;
+}
+.join-btn {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 10px 25px;
+  background-color: #fc6288;
+  color: white;
+  border: none;
+  border-radius: 30px;
+  font-size: 16px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+  text-align: center;
+}
+
+.join-btn:hover {
+  background-color: #5ae92f;
+}
